@@ -1,5 +1,15 @@
 2010-07-01
 
+	* src/folderview.c: folderview_key_pressed(): modified key handling
+	  code.
+
+2010-07-01
+
+	* src/folderview.c: folderview_key_pressed(): move up/collapse/expand
+	  row with left/right key (like Windows Explorer).
+
+2010-07-01
+
 	* src/mimeview.c: mimeview_selection_changed(): don't display images
 	  when inline image setting is off (workaround for vulnerability).
 
